--- a/EzbillApp/app/src/main/res/layout/activity_phone.xml
+++ b/EzbillApp/app/src/main/res/layout/activity_phone.xml
@@ -11,7 +11,7 @@
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="@drawable/layout_bg2"
+        android:background="#573a9e"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -24,6 +24,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="70dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/layout_bg6"
             android:src="@drawable/ic_person_gray_24dp" />
 
         <TextView
@@ -33,7 +34,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="72dp"
             android:text="LoggedUserName"
-            android:textColor="#3C3C3C"
+            android:textColor="@color/white"
             android:textSize="16sp" />
 
         <Button
@@ -56,7 +57,7 @@
         android:layout_width="match_parent"
         android:layout_height="610dp"
         android:layout_marginTop="170dp"
-        android:background="@drawable/layout_bg5"
+        android:background="@drawable/layout_bg_shade4"
         android:orientation="vertical"></LinearLayout>
 
     <LinearLayout
