--- a/EzbillApp/app/src/main/res/layout/activity_timer.xml
+++ b/EzbillApp/app/src/main/res/layout/activity_timer.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="380dp"
-        android:background="@drawable/layout_bg"
+        android:background="@drawable/layout_bg_shade4"
         android:orientation="vertical">
 
     </LinearLayout>
@@ -31,6 +31,7 @@
             android:layout_marginTop="20dp"
             android:gravity="center"
             android:text="Push to Start"
+            android:textSize="12sp"
             app:cornerRadius="30dp" />
 
         <TextView
@@ -57,6 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Save"
+            android:textSize="12sp"
             app:cornerRadius="30dp" />
 
         <Button
