--- a/EzbillApp/app/src/main/res/layout/activity_add_new_user.xml
+++ b/EzbillApp/app/src/main/res/layout/activity_add_new_user.xml
@@ -45,6 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Create Group"
+        android:textSize="12sp"
         app:cornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
