--- a/EzbillApp/app/src/main/res/layout/activity_all_groups.xml
+++ b/EzbillApp/app/src/main/res/layout/activity_all_groups.xml
@@ -8,25 +8,34 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:orientation="vertical"
-        android:background="@drawable/layout_bg">
+        android:layout_height="200dp"
+        android:background="@drawable/layout_bg_shade1"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageView7"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_margin="110dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="10dp"
             app:srcCompat="@drawable/ic__81_consultation" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="200dp"
+        android:background="@drawable/layout_bg_shade2"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="164dp"></LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="540dp"
         android:background="@drawable/layout_bg4"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="326dp">
+        tools:layout_editor_absoluteY="218dp">
 
         <TextView
             android:id="@+id/text_view_data4"
