--- a/EzbillApp/app/src/main/res/layout/activity_create_group.xml
+++ b/EzbillApp/app/src/main/res/layout/activity_create_group.xml
@@ -1,62 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".CreateGroupActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:background="@drawable/layout_bg"
+        android:layout_height="200dp"
+        android:background="#573a9e"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_marginLeft="135dp"
+            android:layout_marginTop="25dp"
+            app:srcCompat="@drawable/ic__81_consultation" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="700dp"
-        android:layout_margin="50dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="58dp"
-        tools:layout_editor_absoluteY="31dp">
-
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_margin="50dp"
-            android:layout_marginBottom="20dp"
-            app:srcCompat="@drawable/ic__81_consultation" />
+        android:layout_height="150dp"
+        android:layout_marginTop="-40dp"
+        android:background="@drawable/layout_bg_shade4"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="38dp"
             android:text="Please Enter Your Group Name!"
-            android:textColor="#000000" />
+            android:textColor="@color/white"
+            android:textSize="22dp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:layout_marginTop="-40dp"
+        android:background="@drawable/layout_bg4"
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/group_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
+            android:layout_marginLeft="100dp"
             android:layout_marginTop="60dp"
             android:ems="10"
+            android:gravity="center"
             android:hint="Group Name"
-            android:inputType="text" />
+            android:inputType="text"
+            android:textColor="@color/black" />
 
         <Button
             android:id="@+id/save_name_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="115dp"
+            android:layout_marginLeft="165dp"
             android:layout_marginTop="50dp"
             android:text="Save"
+            android:textSize="12sp"
             app:cornerRadius="30dp" />
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
