--- a/EzbillApp/app/src/main/res/layout/activity_login.xml
+++ b/EzbillApp/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,76 +7,107 @@
     android:orientation="vertical"
     tools:context=".LoginActivity">
 
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="440dp"
-        android:background="@drawable/layout_bg"
-        android:gravity="center"
-        android:orientation="vertical"></LinearLayout>
-
-    <LinearLayout
-        android:layout_width="390dp"
-        android:layout_height="710dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="40dp"
+        android:layout_height="150dp"
+        android:background="#573a9e"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="300dp"
-            android:layout_height="320dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="40dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/ic__45_dividends" />
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="49dp"
+            android:layout_marginTop="45dp"
+            android:text="Welcome to Splitter!"
+            android:textColor="@color/white"
+            android:textSize="35dp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_marginTop="-25dp"
+        android:background="@drawable/layout_bg_shade4"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="61dp"
+            android:layout_marginTop="40dp"
+            android:text="Login to continue"
+            android:textColor="@color/white"
+            android:textSize="25dp" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="600dp"
+        android:layout_marginTop="-30dp"
+        android:background="@drawable/layout_bg4"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/text"
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_gravity="center|left"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginTop="50dp"
             android:text="Enter Your Phone No."
-            android:textSize="20dp" />
+            android:textColor="#160765"
+            android:textSize="14sp" />
 
         <EditText
             android:id="@+id/phone"
-            android:layout_width="match_parent"
+            android:layout_width="294dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
             android:layout_marginTop="1dp"
             android:layout_marginBottom="20dp"
-            android:ems="10"
+            android:ems="8"
+            android:foregroundGravity="fill"
+            android:gravity="fill"
             android:hint="Phone No."
-            android:inputType="phone" />
+            android:inputType="phone"
+            android:textSize="12sp" />
 
         <Button
             android:id="@+id/btngenerateOTP"
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_gravity="center"
+            android:layout_margin="8dp"
             android:text="Generate OTP"
-            android:textSize="20dp"
+            android:textSize="10dp"
             app:cornerRadius="30dp" />
 
         <EditText
             android:id="@+id/otp"
-            android:layout_width="match_parent"
+            android:layout_width="294dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
+            android:layout_marginBottom="15dp"
             android:hint="OTP"
-            android:inputType="number" />
+            android:inputType="number"
+            android:textSize="12sp" />
 
         <Button
             android:id="@+id/btnverifyOTP"
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
             android:layout_marginBottom="20dp"
             android:enabled="false"
             android:text="Verify OTP"
-            android:textSize="20dp"
+            android:textSize="10dp"
             app:cornerRadius="30dp" />
 
 
@@ -85,6 +116,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="15dp"
             android:layout_marginBottom="10dp"
             android:visibility="invisible" />
 
@@ -95,22 +127,27 @@
 
             <TextView
                 android:id="@+id/editTextTextPersonName"
-                android:layout_width="120dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="8dp"
+                android:gravity="center"
                 android:hint="New User"
                 android:inputType="textPersonName"
                 android:text="New User ?"
-                android:textColor="@color/black"
+                android:textColor="#160765"
                 android:textSize="15dp" />
 
             <Button
                 android:id="@+id/signup_btn"
-                android:layout_width="170dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginBottom="20dp"
+                android:gravity="center"
                 android:text="Sign Up"
-                android:textSize="20dp"
+                android:textSize="10dp"
                 app:cornerRadius="30dp" />
 
         </LinearLayout>
@@ -118,4 +155,4 @@
     </LinearLayout>
 
 
-</RelativeLayout>
+</LinearLayout>
