--- a/EzbillApp/app/src/main/res/layout/activity_notification.xml
+++ b/EzbillApp/app/src/main/res/layout/activity_notification.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Button"
+        android:textSize="12sp"
         app:cornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
