--- a/EzbillApp/app/src/main/res/layout/activity_sign_up.xml
+++ b/EzbillApp/app/src/main/res/layout/activity_sign_up.xml
@@ -9,90 +9,101 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="490dp"
-        android:background="@drawable/layout_bg"
-        android:orientation="vertical"></LinearLayout>
+        android:layout_height="150dp"
+        android:background="#573a9e"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="61dp"
+            android:layout_marginTop="40dp"
+            android:text="SignUp !"
+            android:textColor="@color/white"
+            android:textSize="35sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="150dp"
+        android:layout_marginTop="135dp"
+        android:background="@drawable/layout_bg_shade4"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="300dp"
-            android:layout_height="200dp"
+            android:layout_width="150dp"
+            android:layout_height="100dp"
             android:layout_gravity="center"
-            android:layout_marginTop="80dp"
             app:srcCompat="@drawable/ic__81_consultation" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="600dp"
+        android:layout_marginTop="250dp"
+        android:background="@drawable/layout_bg4"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="240dp"
+            android:layout_height="30dp"
             android:layout_gravity="left"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="65dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginBottom="20dp"
             android:text="Enter Your Phone No. to SignUp"
-            android:textColor="@color/black"
-            android:textSize="20dp" />
+            android:textColor="#160765"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/phone"
-            android:layout_width="match_parent"
+            android:layout_width="294dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
+            android:layout_marginLeft="65dp"
             android:layout_marginRight="40dp"
             android:layout_marginBottom="20dp"
             android:hint="Phone No."
             android:inputType="phone"
-            android:textColor="@color/black" />
-
-        <TextView
-            android:id="@+id/text1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginBottom="10dp"
-            android:text="Sign Up"
             android:textColor="@color/black"
-            android:textSize="20dp" />
+            android:textSize="12sp" />
 
         <Button
             android:id="@+id/btngenerateOTP"
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
+            android:layout_marginLeft="130dp"
             android:layout_marginBottom="20dp"
+            android:gravity="center"
             android:text="Generate OTP"
-            android:textSize="20dp"
+            android:textSize="10sp"
             app:cornerRadius="30dp" />
 
         <EditText
             android:id="@+id/otp"
-            android:layout_width="match_parent"
+            android:layout_width="294dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
+            android:layout_marginLeft="65dp"
             android:layout_marginRight="40dp"
             android:layout_marginBottom="20dp"
             android:hint="OTP"
-            android:inputType="number" />
+            android:inputType="number"
+            android:textSize="12sp" />
 
         <Button
             android:id="@+id/btnverifyOTP"
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
+            android:layout_marginLeft="130dp"
             android:layout_marginBottom="20dp"
             android:enabled="false"
             android:text="Verify OTP"
-            android:textSize="20dp"
+            android:textSize="10sp"
             app:cornerRadius="30dp" />
 
         <ProgressBar
