--- a/EzbillApp/app/src/main/res/layout/activity_user_name.xml
+++ b/EzbillApp/app/src/main/res/layout/activity_user_name.xml
@@ -1,42 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".UserName">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:orientation="vertical"
-        android:background="@drawable/layout_bg">
+        android:layout_height="150dp"
+        android:background="#573a9e"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageView5"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_gravity="center"
-            android:layout_marginTop="40dp"
-            app:srcCompat="@drawable/ic_person_gray_24dp" />
+            android:layout_margin="20dp"
+            app:srcCompat="@drawable/ic_person_gray_24dp"
+            android:background="@drawable/layout_bg6"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_marginTop="-20dp"
+        android:background="@drawable/layout_bg_shade4"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="45dp"
+            android:text="Fill Up Your Details"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="500dp"
+        android:layout_marginTop="-30dp"
         android:background="@drawable/layout_bg4"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="235dp">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="120dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginBottom="10dp"
             android:text="Please Enter Your Name!"
-            android:textColor="#000000" />
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/group_name"
@@ -44,17 +66,22 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="100dp"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="20dp"
             android:ems="10"
             android:hint="Name"
-            android:inputType="text" />
+            android:inputType="text"
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="120dp"
+            android:layout_marginLeft="100dp"
             android:layout_marginTop="8dp"
-            android:text="Please Enter Your Address!" />
+            android:layout_marginBottom="10dp"
+            android:text="Please Enter Your Address!"
+            android:textColor="@color/black"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/address_name"
@@ -64,16 +91,20 @@
             android:layout_marginTop="8dp"
             android:ems="10"
             android:hint="Address"
-            android:inputType="text" />
+            android:inputType="text"
+            android:textSize="12sp" />
 
         <Button
             android:id="@+id/save_name_button"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="160dp"
-            android:layout_marginTop="8dp"
-            android:text="Save" />
+            android:layout_marginLeft="120dp"
+            android:layout_marginTop="40dp"
+            android:gravity="center"
+            android:text="Save"
+            android:textSize="10sp"
+            app:cornerRadius="30dp" />
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
