--- a/EzbillApp/app/src/main/res/values/colors.xml
+++ b/EzbillApp/app/src/main/res/values/colors.xml
@@ -12,11 +12,11 @@
     <color name="colorPrimary">#FFC107</color>
     <color name="tabTextColor">#fff</color>
     <color name="tabIndicatorColor">#272626</color>
-    <color name="colorPrimaryDark">#7C4DFF</color>
-    <color name="colorTextMain">#3C6086</color>
+    <color name="colorPrimaryDark">#b6a2d7</color>
+    <color name="colorTextMain">#573a9e</color>
     <color name="backgroundColor">#fcfcfc</color>
     <color name="lightGray">#ededed</color>
-    <color name="deepPurple">#7c4dff</color>
+    <color name="deepPurple">#ac87f5</color>
     <color name="yellow">#ffb300</color>
     <color name="green">#00bfa5</color>
     <color name="colorAccent">#FF4081</color>
