--- a/EzbillApp/app/src/main/res/values/themes.xml
+++ b/EzbillApp/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.EzbillApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.EzbillApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/colorTextMain</item>
+        <item name="colorPrimary">@color/colorPrimaryDark</item>
         <item name="colorPrimaryVariant">@color/colorTextMain</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
